--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^12.20.14",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "compose-function": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.34.1",
     "typescript": "^4.3.2",
@@ -40,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/compose-function": "^0.0.30",
+    "@types/react-router": "^5.1.14",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
