--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "antd": "^4.16.2",
+    "axios": "^0.21.1",
     "compose-function": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
