--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -14,6 +14,9 @@
     "antd": "^4.16.2",
     "axios": "^0.21.1",
     "compose-function": "^3.0.3",
+    "effector": "^21.8.11",
+    "effector-react": "^21.3.2",
+    "normalizr": "^3.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
