--- a/todo-app/public/manifest.json
+++ b/todo-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Todo App",
+  "name": "TodoApp Example (by feature-sliced)",
   "icons": [
     {
       "src": "favicon.ico",
