review(todo-app): simplify model usage (with reflect and flat-submodels

--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@effector/reflect": "^0.6.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
