--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -25,7 +25,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.34.1",
+    "sass": "1.34.1",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
