--- a/examples/electron/tsconfig.node.json
+++ b/examples/electron/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.ts", "src/app/main", "src/preload", "src/main", "src/preload", "src/shared"],
+  "include": ["electron.vite.config.ts", "src/app/main", "src/app/preload", "src/main", "src/preload", "src/shared"],
   "compilerOptions": {
     "composite": true,
     "types": ["electron-vite/node"],
